# jogi

./: .flake8  .gitignore  LICENSE  README.md  docker-compose.yaml  noxfile.py  pyproject.toml
.github/workflows/: main.yml  python-app.yml
oracle/startup/: startup.sql
src/jogi/: .env  __init__.py  main.py
src/jogi/cli/: schema.py
src/jogi/config/: config.py
src/jogi/oracle/: oracle.py
src/jogi/schema/: dump.py
tests/component/: test_cli.py
tests/unit/schema/: test_dump.py
