[tool.poetry]
name = "jogi"
version = "0.0.1"
description = "Just Oracle Git Integration"
readme = "README.md"
authors = ["Slavo Ng"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "jogi.*"
disallow_untyped_defs = true

[tool.poetry.dependencies]
python = "^3.10"
cx-Oracle = "^8.3.0"
typer = "^0.7.0"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pip = "^22.3.1"
nox = "^2022.8.7"
nox-poetry = "^1.0.2"

[tool.poetry.group.tests]
optional = true
[tool.poetry.group.tests.dependencies]
pytest = "^7.1.3"
mypy = "^0.991"
nox = "^2022.8.7"
nox-poetry = "^1.0.2"

[tool.pytest.ini_options]
pythonpath = ["src"]
log_format = "%(asctime)s %(name)s %(levelname)s %(message)s"
log_level = "INFO"
log_cli = false

[tool.poetry.group.audit]
optional = true
[tool.poetry.group.audit.dependencies]
pip-audit = "^2.4.10"
